--- a/pages/thingRead.gohtml
+++ b/pages/thingRead.gohtml
@@ -11,36 +11,37 @@
 		<div class="btn-toolbar justify-content-center">
 			<div class="btn-group mx-1 mb-4">
 				<a class="btn btn-sm btn-primary" href="{{.Thing.DetailsUrl}}" title="Back to details">
-					<i class="fas fa-arrow-left"></i>
+					<i class="fa-solid fa-arrow-left"></i>
 				</a>
 			</div>
 			<div class="btn-group mx-1 mb-4">
 				<a id="navFirst" class="btn btn-sm btn-primary" title="First">
-					<i class="fas fa-angle-double-left"></i>
+					<i class="fa-solid fa-angle-double-left"></i>
 				</a>
 				<a id="navPrev" class="btn btn-sm btn-primary" title="Previous">
-					<i class="fas fa-angle-left"></i>
+					<i class="fa-solid fa-angle-left"></i>
 				</a>
 				<button id="navCurr" class="btn btn-sm btn-primary" title="Current" disabled></button>
 				<a id="navNext" class="btn btn-sm btn-primary" title="Next">
-					<i class="fas fa-angle-right"></i>
+					<i class="fa-solid fa-angle-right"></i>
 				</a>
 				<a id="navLast" class="btn btn-sm btn-primary" title="Last">
-					<i class="fas fa-angle-double-right"></i>
+					<i class="fa-solid fa-angle-double-right"></i>
 				</a>
 			</div>
 			<div class="btn-group mx-1 mb-4">
 				<button id="fullscreen" type="button" class="btn btn-sm btn-primary" title="Fullscreen">
-					<i class="fas fa-expand"></i>
+					<i class="fa-solid fa-expand"></i>
 				</button>
-				<button id="slideshow" type="button" class="btn btn-sm btn-primary dropdown-toggle"
-					data-toggle="dropdown" title="Slideshow">
-					<i class="far fa-clock"></i>
-				</button>
-				<div class="dropdown-menu dropdown-menu-right" id="slideshowButtons">
-					<button data-delay="5" class="dropdown-item" type="button">5 seconds</button>
-					<button data-delay="10" class="dropdown-item" type="button">10 seconds</button>
-					<button data-delay="30" class="dropdown-item" type="button">30 seconds</button>
+				<div class="dropdown">
+					<button class="btn btn-sm btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" title="Slideshow">
+						<i class="fa-regular fa-clock"></i>
+					</button>
+					<ul class="dropdown-menu dropdown-menu-end" id="slideshowButtons">
+						<li><button data-delay="5" class="dropdown-item" type="button">5 seconds</button></li>
+						<li><button data-delay="10" class="dropdown-item" type="button">10 seconds</button></li>
+						<li><button data-delay="30" class="dropdown-item" type="button">30 seconds</button></li>
+					</ul>
 				</div>
 			</div>
 		</div>
@@ -52,7 +53,7 @@
 		</div>
 		<div id="fullscreenPageCounter"></div>
 	</div>
-
+	
 	{{template "e_footer.gohtml" .}}
 	<script>
 		var hash = {{ .Hash }};
@@ -61,7 +62,7 @@
 		var backUrl = {{ .Thing.DetailsUrl }};
 		var title = {{ .Thing.Title }};
 		var page = {{ .Page }};
-
+		
 		$(document).ready(function () {
 			var $title = $('title');
 			var $target = $('#target');
@@ -78,7 +79,7 @@
 			var $slideshowButtons = $('#slideshowButtons');
 			var $navAll = $('#navPrev,#navNext,#navFirst,#navLast');
 			var $fullscreen = $('#fullscreen');
-
+			
 			setPage(page);
 			function setPage(i) {
 				if (!(i in pages)) {
@@ -87,9 +88,9 @@
 				}
 				
 				page = i | 0;
-
+				
 				var expectedPrefix = prefix + "/" + page;
-
+				
 				if (location.pathname != expectedPrefix) {
 					if (location.pathname === prefix) {
 						history.replaceState({ page: page }, "", expectedPrefix);
@@ -97,75 +98,74 @@
 						history.pushState({ page: page }, "", expectedPrefix);
 					}
 				}
-
+				
 				$targetImg.show();
 				$targetImg.attr('src', pages[page]);
 				var pageText = "Page " + (page + 1) + "/" + pages.length;
 				$fullscreenPageCounter.html((page + 1) + "/" + pages.length);
 				$navCurr.html(pageText)
 				$title.html("sugoi - " + title + " " + pageText);
-
+				
 				var prevPage = page - 1;
 				if (prevPage < 0) {
 					$navPrev.addClass('disabled').attr('href', 'javascript:;').removeData('page')
 				} else {
 					$navPrev.removeClass('disabled').attr('href', prefix + "/" + prevPage).data('page', prevPage)
 				}
-
+				
 				var nextPage = page + 1;
 				if (nextPage >= pages.length) {
 					$navNext.addClass('disabled').attr('href', 'javascript:;').removeData('page')
 				} else {
 					$navNext.removeClass('disabled').attr('href', prefix + "/" + nextPage).data('page', nextPage)
 				}
-
+				
 				var firstPage = 0;
 				if (page <= firstPage) {
 					$navFirst.addClass('disabled').attr('href', 'javascript:;').removeData('page')
 				} else {
 					$navFirst.removeClass('disabled').attr('href', prefix + "/" + firstPage).data('page', firstPage)
 				}
-
+				
 				var lastPage = pages.length - 1;
 				if (page >= lastPage) {
 					$navLast.addClass('disabled').attr('href', 'javascript:;').removeData('page')
 				} else {
 					$navLast.removeClass('disabled').attr('href', prefix + "/" + lastPage).data('page', lastPage)
 				}
-
+				
 				if (nextPage in pages) {
 					preloadImage(pages[nextPage]);
 				}
-
+				
 				if (prevPage in pages) {
 					preloadImage(pages[prevPage]);
 				}
-
+				
 				resetSlideshow();
 				return true;
 			}
-
+			
 			$navAll.click(function (e) {
 				e.preventDefault();
-
+				
 				var nextPage = $(e.currentTarget).data('page');
-
+				
 				setPage(nextPage);
 			});
-
+			
 			window.addEventListener('popstate', function (event) {
 				if ('page' in event.state) {
 					setPage(event.state.page);
 				}
 			});
-
+			
 			var prevKey = null;
 			window.addEventListener('keydown', function (event) {
 				if (event.isComposing) {
 					return;
 				}
-
-				console.log(event.key);
+				
 				switch (event.key) {
 					case "0":
 					case "1":
@@ -173,136 +173,136 @@
 					case "3":
 					case "4":
 					case "5":
-						if (event.key == prevKey) {
-							setThingRating(hash, event.key)
-								.done(function (data) {
-									toaster(data.Message);
-								})
-								.fail(function (data) {
-									toaster(data.responseJSON.Error);
-								});
-						} else {
-							toaster("Press " + event.key + " again to set the rating to " + event.key + " stars");
-						}
-						break;
-
+					if (event.key == prevKey) {
+						setThingRating(hash, event.key)
+						.done(function (data) {
+							toaster(data.Message);
+						})
+						.fail(function (data) {
+							toaster(data.responseJSON.Error);
+						});
+					} else {
+						toaster("Press " + event.key + " again to set the rating to " + event.key + " stars");
+					}
+					break;
+					
 					case "m":
-						thingAddMark(hash)
-							.done(function (data) {
-								toaster(data.Message);
-							})
-							.fail(function (data) {
-								toaster(data.responseJSON.Error);
-							});
-						break;
-
+					thingAddMark(hash)
+					.done(function (data) {
+						toaster(data.Message);
+					})
+					.fail(function (data) {
+						toaster(data.responseJSON.Error);
+					});
+					break;
+					
 					case "n":
-						thingSubMark(hash)
-							.done(function (data) {
-								toaster(data.Message);
-							})
-							.fail(function (data) {
-								toaster(data.responseJSON.Error);
-							});
-						break;
-
+					thingSubMark(hash)
+					.done(function (data) {
+						toaster(data.Message);
+					})
+					.fail(function (data) {
+						toaster(data.responseJSON.Error);
+					});
+					break;
+					
 					case "c":
-						if (event.key == prevKey) {
-							setThingCover(hash, pages[page])
-								.done(function (data) {
-									toaster(data.Message);
-								})
-								.fail(function (data) {
-									toaster(data.responseJSON.Error);
-								});
-						} else {
-							toaster("Press " + event.key + " again to set the cover to " + pages[page]);
-						}
-						break;
-
+					if (event.key == prevKey) {
+						setThingCover(hash, pages[page])
+						.done(function (data) {
+							toaster(data.Message);
+						})
+						.fail(function (data) {
+							toaster(data.responseJSON.Error);
+						});
+					} else {
+						toaster("Press " + event.key + " again to set the cover to " + pages[page]);
+					}
+					break;
+					
 					case "s":
-						toggleSlideshow(10 * 1000);
-						event.preventDefault();
-						break;
-
+					toggleSlideshow(10 * 1000);
+					event.preventDefault();
+					break;
+					
 					case "t":
-						toaster("This is a toast!");
-						event.preventDefault();
-						break;
-
+					toaster("This is a toast!");
+					event.preventDefault();
+					break;
+					
 					case "f":
-						goFullScreen();
-						event.preventDefault();
-						break;
-
+					goFullScreen();
+					event.preventDefault();
+					break;
+					
 					case "Home":
-						setPage(0);
-						event.preventDefault();
-						break;
-
+					setPage(0);
+					event.preventDefault();
+					break;
+					
 					case "End":
-						setPage(pages.length - 1);
-						event.preventDefault();
-						break;
-
+					setPage(pages.length - 1);
+					event.preventDefault();
+					break;
+					
 					case "ArrowLeft":
-						setPage(page - 1);
-						event.preventDefault();
-						break;
-
+					setPage(page - 1);
+					event.preventDefault();
+					break;
+					
 					case "ArrowRight":
-						setPage(page + 1);
-						event.preventDefault();
-						break;
-
+					setPage(page + 1);
+					event.preventDefault();
+					break;
+					
 					case " ":
 					case "Escape":
-						stopSlideshow();
-						event.preventDefault();
-						break;
-
+					stopSlideshow();
+					event.preventDefault();
+					break;
+					
 					case "=":
 					case "+":
-						if (slideshowIsOn) {
-							slideshowMs += 1000;
-							slideshowMs = Math.max(1000, slideshowMs);
-							toaster("Slideshow time: " + slideshowMs/1000 + "s", 1000);
-						}
-						resetSlideshow();
-						event.preventDefault();
-						break;
-
+					if (slideshowIsOn) {
+						slideshowMs += 1000;
+						slideshowMs = Math.max(1000, slideshowMs);
+						toaster("Slideshow time: " + slideshowMs/1000 + "s", 1000);
+					}
+					resetSlideshow();
+					event.preventDefault();
+					break;
+					
 					case "-":
-						if (slideshowIsOn) {
-							slideshowMs -= 1000;
-							slideshowMs = Math.max(1000, slideshowMs);
-							toaster("Slideshow time: " + slideshowMs/1000 + "s", 1000);
-						}
-						resetSlideshow();
-						event.preventDefault();
-						break;
+					if (slideshowIsOn) {
+						slideshowMs -= 1000;
+						slideshowMs = Math.max(1000, slideshowMs);
+						toaster("Slideshow time: " + slideshowMs/1000 + "s", 1000);
+					}
+					resetSlideshow();
+					event.preventDefault();
+					break;
 				}
-
+				
 				prevKey = event.key;
 			});
-
+			
 			$targetImg.click(function (e) {
 				e.preventDefault();
 				var halfWidth = e.currentTarget.width / 2;
-
+				
 				if (e.originalEvent.offsetX > halfWidth) {
 					setPage(page + 1);
 				} else {
 					setPage(page - 1);
 				}
 			});
-
+			
 			$slideshowButtons.on('click', 'button', function (e) {
 				e.preventDefault();
 				var delay = $(e.currentTarget).data('delay') * 1000;
 				startSlideshow(delay);
 			});
-
+			
 			var slideshowIsOn = false;
 			var slideshowInterval = null;
 			var slideshowMs = null;
@@ -314,7 +314,7 @@
 					startSlideshow(delayInMs);
 				}
 			}
-
+			
 			function resetSlideshow() {
 				if (!slideshowIsOn) {
 					return;
@@ -324,30 +324,30 @@
 					stopSlideshow();
 					return;
 				}
-
+				
 				if (slideshowInterval) {
 					clearInterval(slideshowInterval);
 					slideshowInterval = null;
 				}
 				$fullscreenProgressBar.stop().css({ width: "0%" }).animate({ width: "100%" }, slideshowMs, "linear");
-
+				
 				slideshowInterval = setTimeout(function () {
 					if (!setPage(page + 1)) {
 						stopSlideshow();
 					}
 				}, slideshowMs);
 			}
-
+			
 			function startSlideshow(delayInMs) {
 				if (page + 1 == pages.length) {
 					return;
 				}
-
+				
 				slideshowMs = delayInMs;
 				slideshowIsOn = true;
 				resetSlideshow();
 			}
-
+			
 			function stopSlideshow() {
 				if (slideshowInterval) {
 					clearInterval(slideshowInterval);
@@ -357,26 +357,26 @@
 				slideshowMs = null;
 				slideshowIsOn = false;
 			}
-
+			
 			function goFullScreen() {
 				$target[0].requestFullscreen();
 			}
-
+			
 			$fullscreen.click(function (e) {
 				e.preventDefault();
 				goFullScreen();
 			});
-
+			
 			function toaster(msg, timeout) {
 				timeout = timeout || 5000;
 				var $message = $('<div class="alert alert-primary" role="alert">').html(msg);
-				$message.appendTo($fullscreenToaster);
-				$message.fadeOut(timeout, "slowOut", function () {
-					$message.remove();
-				});
-			}
-		});
-	</script>
-</body>
-
-</html>
+					$message.appendTo($fullscreenToaster);
+					$message.fadeOut(timeout, "slowOut", function () {
+						$message.remove();
+					});
+				}
+			});
+		</script>
+	</body>
+	
+	</html>
