--- a/templates/e_header.gohtml
+++ b/templates/e_header.gohtml
@@ -3,7 +3,7 @@
 		<div class="container">
 			<a href="/" id="brandButton" class="navbar-brand">Sugoi</a>
 			<form id="logoutForm" action="/logout" method="POST">
-				<a href="/system" class="btn btn-info"><i class="fa fa-cog"></i></a>
+				<a href="/system" class="btn btn-info"><i class="fa-solid fa-cog"></i></a>
 				<button type="submit" class="btn btn-secondary">Logout</button>
 			</form>
 		</div>
