--- a/pages/login.gohtml
+++ b/pages/login.gohtml
@@ -14,24 +14,31 @@
                     <div class="card-body">
                         <form id="loginForm" method="POST">
                             {{if .Error}}
-                            <div class="alert alert-danger" role="alert">
-                                {{.Error}}
-                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
+                                <div class="alert alert-danger alert-dismissible mb-2" role="alert">
+                                    {{.Error}}
+                                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                                </div>
                             {{end}}
-                            <div class="form-group">
+
+                            <div class="mb-2">
                                 <label>Username</label>
+                            </div>
+
+                            <div class="mb-2">
                                 <input type="text" name="user" value="{{trd "user"}}" class="form-control">
                             </div>
 
-                            <div class="form-group">
+                            <div class="mb-2">
                                 <label>Password</label>
+                            </div>
+
+                            <div class="mb-2">
                                 <input type="password" name="password" class="form-control">
                             </div>
 
-                            <button type="submit" class="btn btn-primary">Login</button>
+                            <div class="mb-2">
+                                <button type="submit" class="btn btn-primary">Login</button>
+                            </div>
                         </form>
                     </div>
                 </div>
