--- a/pages/thingSearchMetadata.gohtml
+++ b/pages/thingSearchMetadata.gohtml
@@ -26,7 +26,7 @@
 
 		</div>
 		<form id="searchForm" class="mb-3">
-			<div class="form-group">
+			<div class="mb-2">
 				<label>Search</label>
 				<input type="text" class="form-control" name="title" value="{{ .Search }}">
 				<div>
@@ -34,9 +34,9 @@
 				</div>
 			</div>
 			<div id="advancedTarget" style="display: none">
-				<div class="form-group">
+				<div class="mb-2">
 					<label>Language</label>
-					<select class="form-control" name="language">
+					<select class="form-select" name="language">
 						<option value="">All</option>
 						{{$selected := .SelectedLanguage}}
 						{{range $key, $val := .SearchLanguages}}
@@ -122,7 +122,7 @@
 						var $tagsTd = $('<td>');
 						for (const tag of work.tags[rowTitle]) {
 							$tagsTd.append([
-								$('<span class="badge badge-primary">').html(tag),
+								$('<span class="badge bg-primary">').html(tag),
 								' ',
 							]);
 						}
@@ -141,7 +141,7 @@
 
 						for (const url of work.locations) {
 							$locations.append([
-								$('<a class="btn btn-sm btn-primary" target="_blank"><i class="fas fa-link"></a>').attr('href', url).attr('title', url),
+								$('<a class="btn btn-sm btn-primary" target="_blank"><i class="fa-solid fa-link"></a>').attr('href', url).attr('title', url),
 								' ',
 							]);
 						}
