--- a/pages/thingDetails.gohtml
+++ b/pages/thingDetails.gohtml
@@ -69,7 +69,7 @@
 				<div class="card mb-4 flex-column flex-fill">
 					<div class="card-body p-0 d-flex justify-content-center">
 						<a href="{{$thing.ReadFileUrl $key}}" class="d-inline-block">
-							<img src="{{$thing.ThumbUrl $val}}" class="img-fluid" alt="Cover" />
+							<img src="{{$thing.ThumbUrl $val}}" class="img-fluid" loading="lazy" alt="Cover" />
 						</a>
 					</div>
 				</div>
